fix: correct accumulator-wrapper z-index

--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ h2 {
 .accumulator-wrapper {
     position: relative;
     cursor: pointer;
-    z-index: -1;
+    z-index: 1;
 }
 
 .accumulator-tooltip {
